# tyuiu-gpt

./: .env  .gitignore  Dockerfile  Readme.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.gigaide/: gigaide.properties
documents/: ТИУ База знаний.txt
documents/texts/: ТИУ_База_знаний.txt  ТИУ_Описание_направлений_подготовки.txt
migration/: env.py
migration/versions/: 2025_04_20_0031-2a5f09ddd423_initial_revision.py
notebooks/: load_entities_elastic.ipynb  ТИУ_Графовая_База_знаний.txt
prompts/: ai_agent_prompt.txt  Перефразирование_запроса.txt  Сотрудник_приёмной_комиссии.txt
scripts/: add_documents_elastic.py  add_graph_neo4j.py  extract.py  fast_neo4j_graph.py  load_documents_to_elastic.py  load_graph_to_neo4j.py  neo4j_db.py  neo4j_graph.py  read_neo4j.py  subgraph.py  test.py  ТИУ_Entities_Relations_Passed_Scores.txt  ТИУ_проходные_баллы_2024.txt
src/: chat_bot.py  config.py  dto.py  repository.py  settings.py  utils.py
src/ai_agent/: __init__.py  base_agent.py  rag_agent.py  react_agent.py  states.py  utils.py
src/api/: app.py  lifespan.py
src/api_v1/: app.py  container.py  dependencies.py
src/controllers/: __init__.py  chatbot_controller.py
src/core/: entities.py  interfaces.py  use_cases.py
src/di/: container.py
src/dto/: __init__.py  count.py
src/mappers/: __init__.py  chat_mapper.py  message_mapper.py
src/misc/: files.py
src/rag/: __init__.py  base_rag.py  chain.py  elastic.py  example_chain.py  grag.py  naive_chain.py  neo4j_retriever.py  query_rewriter.py  rag.py  rag_helpers.py  rag_utils.py  utils.py
src/repository/: __init__.py  base_repository.py  chat_repository.py  message_repository.py
src/schemas/: __init__.py  chatbot_schemas.py
src/services/: __init__.py  chat_bot_service.py
src/tyuiu_gpt/: base.py  (+6 more)
(+156 files in other folders)
