[tool.poetry]
name = "tyuiuaichatbotapi"
version = "0.1.0"
description = ""
authors = ["AndreyKosov <andrey.kosov.05@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.115.8"}
py2neo = "^2021.2.4"
networkx = "^3.4.2"
neo4j = "^5.28.1"
matplotlib = "^3.10.0"
langchain = "^0.3.19"
langchain-elasticsearch = "^0.3.2"
langchain-gigachat = "^0.3.4"
langchain-community = "^0.3.18"
sentence-transformers = "^3.4.1"
dependency-injector = "^4.46.0"
uvicorn = "^0.34.0"
yandexcloud = "^0.334.0"
yandex-cloud-ml-sdk = "^0.4.1"
dishka = "^1.4.2"
email-validator = "^2.2.0"
langchain-huggingface = "^0.1.2"
accelerate = "^1.6.0"
aiohttp = "^3.11.16"
requests = "^2.32.3"
langgraph = "^0.3.30"
redis = "^5.2.1"
aioredis = "^2.0.1"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
faststream = {extras = ["rabbit"], version = "^0.5.39"}
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
